--- a/internship3/pom.xml
+++ b/internship3/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>internship1</artifactId>
+    <artifactId>internship3</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -24,8 +24,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.0.0-alpha-1</version>
-
+            <version>4.0.0</version>
         </dependency>
 
         <dependency>
@@ -47,6 +46,5 @@
             <version>5.0.3</version>
         </dependency>
     </dependencies>
-
 
 </project>
