--- a/FBFeatures/pom.xml
+++ b/FBFeatures/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>internship1</artifactId>
+    <artifactId>FBFeatures</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,6 +13,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -24,8 +25,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.0.0-alpha-1</version>
-
+            <version>4.0.0</version>
         </dependency>
 
         <dependency>
@@ -47,6 +47,5 @@
             <version>5.0.3</version>
         </dependency>
     </dependencies>
-
 
 </project>
